--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,12 @@
 runtime: python39
 
+inbound_services:
+- warmup
+
 handlers:
-- url: /.*
-  script: main.app
+  - url: /static
+    static_dir: static
+  
+  - url: /.*
+    script: main.app
+
